[project]
name = "atcoder-trophies-backend"
version = "0.3.3"
description = "AtCoder Trophies Backend API server built with FastAPI"
requires-python = ">=3.12, <3.13"

dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.2",
    "typing-extensions>=4.7.1",
    "urllib3>=1.26.15,<2.0.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    # Formatter and linter
    "ruff>=0.1.0",

    # Type checker
    "mypy>=1.7.0",
    "mypy-extensions>=1.1.0",

    # Test tools
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "pytest-recording>=0.13.4",
    "pytest-watch>=4.2.0",
    "vcrpy>=5.1.0",
    "httpx>=0.24.0",            # Required for FastAPI TestClient

    # Development env
    "ipython>=8.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 127
target-version = "py312"

[tool.ruff.lint]
# Rules correspond to flake8 + additional optimizations
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.ruff.format]
# Settings correspond to black's configuration
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["__pycache__", ".venv"]
# Resolve module name conflicts
namespace_packages = true
explicit_package_bases = true

[tool.uv]
dev-dependencies = ["httpx>=0.25.0", "mypy>=1.7.0", "pytest>=8.4.1"]
